objects/Case.object
<CustomObject>
    <fields>
        <fullName>SDO_Status_Indicator__c</fullName>
        <description>What: used on the layout and in reports</description>
        <formula>IMAGE(CASE( Status, 
&quot;New&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png&quot;, 
&quot;Working&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Working.png&quot;, 
&quot;Waiting on customer&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Waiting.png&quot;, 
&quot;Response Received&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Response.png&quot;, 
&quot;Escalated&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;Warning&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;Violation&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png&quot; ),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sub_Type__c</fullName>
        <description>What: Used in KCS Flows</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Setup and Usage</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Order or Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Survey_CSAT__c</fullName>
        <description>What: Appears to be used in some dm_ flows</description>
        <label>Survey CSAT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_URLsrc__c</fullName>
        <description>What: This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Volume__c</fullName>
        <description>What: This field is used by the &quot;Channel History&quot; dashboard on the Service Executive dashboard.  It&apos;s a hidden field on the case that represents the number of cases for that time period.  This is because there are not enough cases in the SDO to make a compelling historical dashboard.  It is manually updated, and tied to no workflow rules.</description>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used by the &quot;SLA Compliance&quot; dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_FieldService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Send Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for RegE</description>
        <label>Sent to Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE(SDO_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;New&quot;, &quot;015Hr000004ZYwf&amp;oid=00DHr00000D9UF3&quot;, 
&quot;Working&quot;,&quot;015Hr000004ZYwg&amp;oid=00DHr00000D9UF3&quot;,
&quot;Waiting on customer&quot;, &quot;015Hr000004ZYwh&amp;oid=00DHr00000D9UF3&quot;,
&quot;Response Received&quot;,&quot;015Hr000004ZYwi&amp;oid=00DHr00000D9UF3&quot;,
&quot;Escalated&quot;, &quot;015Hr000004ZYwj&amp;oid=00DHr00000D9UF3&quot;, 
&quot;Warning&quot;,&quot;015Hr000004ZYwk&amp;oid=00DHr00000D9UF3&quot;,
&quot;Violation&quot;,&quot;015Hr000004ZYwl&amp;oid=00DHr00000D9UF3&quot;,
&quot;Closed in Portal&quot;, &quot;015Hr000004ZYwm&amp;oid=00DHr00000D9UF3&quot;,
&quot;Closed&quot;,&quot;015Hr000004ZYwm&amp;oid=00DHr00000D9UF3&quot;,
&quot;Closed - First Call&quot;, &quot;015Hr000004ZYwm&amp;oid=00DHr00000D9UF3&quot;,
&quot;Submitting Feature&quot;,&quot;015Hr000004ZYwj&amp;oid=00DHr00000D9UF3&quot;,
&quot;015Hr000004ZYwf&amp;oid=00DHr00000D9UF3&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Setup and Usage</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Order or Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Subscription Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspicious_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Suspicious Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <label>Time Open</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <description>Used for RegE</description>
        <label>Transaction Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Used for RegE</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <formula>IMAGE( SDO_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Priority, 
&quot;Critical&quot;, &quot;015Hr000004ZYwn&amp;oid=&quot;&amp;$Organization.Id, 
&quot;High&quot;, &quot;015Hr000004ZYwo&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Medium&quot;, &quot;015Hr000004ZYwp&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Low&quot;, &quot;015Hr000004ZYwq&amp;oid=&quot;&amp;$Organization.Id, 
&quot;015Hr000004ZYwq&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Fraudulent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for RegE</description>
        <label>Verified Fraudulent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>This field is used by the &quot;Channel History&quot; dashboard on the Service Executive dashboard.  It&apos;s a hidden field on the case that represents the number of cases for that time period.  This is because there are not enough cases in the SDO to make a compelling historical dashboard.  It is manually updated, and tied to no workflow rules.</description>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_DateTime_Closed_c__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>DateTime_Closed_c__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_DateTime_Opened_c__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>DateTime_Opened_c__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_SlaStartDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>SlaStartDate db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>demoRecommendations__c</fullName>
        <description>DO NOT CHANGE What: used in Case Classification</description>
        <label>demoRecommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__PMT_Days_Open__c</fullName>
        <formula>if(ISBLANK(ClosedDate),
Now()- CreatedDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMT Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__PMT_Program__c</fullName>
        <formula>inov8__PMT_Project__r.inov8__Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMT Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__PMT_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMT Project</label>
        <referenceTo>inov8__PMT_Project__c</referenceTo>
        <relationshipLabel>Cases (Related Project)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Back_Office_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Back Office</label>
        <queue>FINS_Back_Office</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chat_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Chat</label>
        <queue>Chat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_All_FINS_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>External_ID__c</columns>
        <columns>FINS_Q_Branch_Demo_Reference__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FINS_Q_Branch_Demo_Reference__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>*All FINS Cases</label>
    </listViews>
    <listViews>
        <fullName>FINS_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>External_ID__c</columns>
        <columns>FINS_Q_Branch_Demo_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FINS_Q_Branch_Demo_Reference__c</field>
            <operation>excludes</operation>
        </filters>
        <label>*All FINS Cases</label>
    </listViews>
    <listViews>
        <fullName>FINS_Mortgage_Servicing_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.FINS_Lending_Servicing</value>
        </filters>
        <label>Mortgage Servicing Cases</label>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_1_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 1 Queue</label>
        <queue>FINS_Tier_1_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_2_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <queue>FINS_Tier_2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_3_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Queue</label>
        <queue>FINS_Tier_3_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_Treasury_Management_Operations</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Goldfinch Bicycles</value>
        </filters>
        <label>Treasury Management Operations</label>
    </listViews>
    <listViews>
        <fullName>FINS_Wealth_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Jennifer Blake,Alex Cooper,Vivian Yang,Rachel Morris,Julie Morris</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Chatbot,Card</value>
        </filters>
        <label>*FINS  Wealth Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <recordTypes>
        <fullName>FINS_Commercial_Banking_Treasury_Management_Child</fullName>
        <active>true</active>
        <businessProcess>FINS Treasury Implementation - Child</businessProcess>
        <description>Used for Commercial Banking Treasury Implementation</description>
        <label>Commercial Banking - Treasury Management Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Commercial_Banking_Treasury_Management_Parent</fullName>
        <active>true</active>
        <businessProcess>FINS Treasury Implementation - Parent</businessProcess>
        <description>Used for Commercial Banking Treasury Implementation</description>
        <label>Commercial Banking - Treasury Management Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Lending_Servicing</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Case to track loan servicing issues (inbound and outbound).</description>
        <label>Lending - Servicing</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Retail_Banking_Starter_Lost_Stolen_Card</fullName>
        <active>true</active>
        <businessProcess>FINS - Retail Banking - Starter - Lost Stolen Card</businessProcess>
        <description>Retail Banking -  FSC IDO Lost or Stolen Card support</description>
        <label>Retail Banking - Lost Stolen Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Retail_Banking_Starter_Transaction_Dispute</fullName>
        <active>true</active>
        <businessProcess>FINS - Retail Banking - Starter - Transaction Dispute</businessProcess>
        <description>Used to dispute financial transactions (e.g. RegE)</description>
        <label>Transaction Dispute</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_WM_GenAI</fullName>
        <active>true</active>
        <businessProcess>Technical Service</businessProcess>
        <description>For Wealth Gen AI Case Example</description>
        <label>FINS_WM_GenAI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Banking_Fee_Waiver</fullName>
        <active>true</active>
        <businessProcess>FINS - Retail Banking - Starter - Transaction Dispute</businessProcess>
        <description>Banking Ops - Fee waiver support</description>
        <label>Retail Banking - Fee Waiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_SFS_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>SFS Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Service_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Primary case record type used for most cases.</description>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechnicalIssueAdvanced</fullName>
        <active>true</active>
        <businessProcess>Technical Service</businessProcess>
        <description>Use for technical issues</description>
        <label>Technical Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>inov8__PMT_Project</fullName>
        <active>true</active>
        <businessProcess>inov8__PMT</businessProcess>
        <description>Project Issues &amp; Risks related</description>
        <label>PMT Project</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>